(Fix): Makes links in paragraphs more visible

--- a/themes/hugo-spartan/static/css/style.css
+++ b/themes/hugo-spartan/static/css/style.css
@@ -66,6 +66,10 @@ h1 > a {
   color: rgb(51, 51, 51);
 }
 
+p a {
+  font-weight: 500;
+}
+
 :target {
   background-color: #fffa65;
 }
